--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "morilog/jalali": "3.*",
-        "tcg/voyager": "^1.3"
+        "tcg/voyager": "^1.3",
+        "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
