--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "morilog/jalali": "3.*",
+        "renatomarinho/laravel-page-speed": "^1.8",
         "tcg/voyager": "^1.3",
         "uxweb/sweet-alert": "^2.0"
     },
